changed layouts partials widgets consultancy

--- a/themes/hugo-academic/layouts/partials/widgets/consultancy.html
+++ b/themes/hugo-academic/layouts/partials/widgets/consultancy.html
@@ -11,14 +11,18 @@
   <div class="col-xs-12 col-md-8">
   <p>In my limited spare time I also offer consultancy on topics related 
 to sampling, basic statistical analysis and social research methodology,
- for individuals or research institutions. A special part of my current training refers to using the <b>R</b> environment for statistical analysis and data management.</p><p>In a random order, this is a 
-list of my institutional clients:</p><p><a href="https://uefiscdi.ro/" rel="nofollow">The National University Research Council</a></p><p>Romanian branch of <a href="https://playtika.com/" rel="nofollow">Playtika</a></p><p><a href="https://www.ing.ro" rel="nofollow">ING Bank</a></p><p><a href="http://www.cncsis.ro/English/home.php%3EThe%20National%20University%20Research%20Council%3C/a%3E%3Cbr%3E%3C/p%3E%3Cp%3E%3Ca%20href=" rel="nofollow">GfK Romania</a></p>
-<p>Media Pro Management<br /></p>
-<p><a href="http://www.cna.ro/-English-.html" rel="nofollow">National Audiovisual Council</a></p>
-<p><a href="https://www.cegedim.ro/" rel="nofollow">Cegedim</a></p>
+ for individuals or research institutions. A special part of my current training refers to using the <b>R</b> environment for statistical analysis and data management.</p>
+<p>In a random order, this is a list of my institutional clients:</p>
+<p><a href="http://www.dccommunication.ro/">DC Communication</a></p>
+<p><a href="http://www.cna.ro/-English-.html">National Audiovisual Council</a></p>
+<p><a href="http://www.gfk.com/ro/">GfK Romania</a></p>
 <p>Synergy International SRL</p>
-<p><a href="http://www.dccommunication.ro/" rel="nofollow">DC Communication</a></p>
-<p><a href="https://www.nn.ro/" rel="nofollow">NN</a></p>
+<p><a href="https://uefiscdi.ro/">Executive Funding Agency for Higher Education, Research, Development and Innovation</a></p>
+<p><a href="https://www.ing.ro">ING Bank</a></p>
+<p>Media Pro Management<br /></p>
+<p><a href="https://www.cegedim.ro/">Cegedim</a></p>
+<p>Romanian branch of <a href="https://playtika.com/">Playtika</a></p>
+<p><a href="https://www.nn.ro/">NN</a></p>
 
   
   </div>
