--- a/themes/hugo-academic/layouts/partials/widgets/consultancy.html
+++ b/themes/hugo-academic/layouts/partials/widgets/consultancy.html
@@ -23,6 +23,7 @@ to sampling, basic statistical analysis and social research methodology,
 <p><a href="https://www.cegedim.ro/">Cegedim</a></p>
 <p>Romanian branch of <a href="https://playtika.com/">Playtika</a></p>
 <p><a href="https://www.nn.ro/">NN</a></p>
+<p><a href="http://www.worldbank.org/">World Bank</a></p>
 
   
   </div>
