--- a/themes/hugo-academic/layouts/partials/widgets/consultancy.html
+++ b/themes/hugo-academic/layouts/partials/widgets/consultancy.html
@@ -10,8 +10,8 @@
   </div>
   <div class="col-xs-12 col-md-8">
   <p>In my limited spare time I also offer consultancy on topics related 
-to sampling, basic statistical analysis and social research methodology. A dedicated part of my current training employs the <b>R</b> environment for statistical analysis and data management.</p>
-<p>In a random order, this is a list of previous institutions I have signed contracts with:</p>
+to sampling, basic statistical analysis and social research methodology. A significant part of my current training is dedicated to the <b>R</b> environment for statistical analysis and data management.</p>
+<p>In a random order, this is a list of the institutions I have signed contracts with:</p>
 <p><a href="http://www.dccommunication.ro/">DC Communication</a></p>
 <p><a href="http://www.cna.ro/-English-.html">National Audiovisual Council</a></p>
 <p><a href="http://www.gfk.com/ro/">GfK Romania</a></p>
