--- a/themes/hugo-academic/layouts/partials/header.html
+++ b/themes/hugo-academic/layouts/partials/header.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme" content="hugo-academic">
+  <meta name="google-site-verification" content="oBHx66e8uj6a8uemyN51apGJLD1LvmUVRPR6M0GN9Nk" />
   {{ .Hugo.Generator }}
   {{ with .Site.Params.name }}<meta name="author" content="{{ . }}">{{ end }}
 
