--- a/themes/hugo-academic/layouts/partials/widgets/consultancy.html
+++ b/themes/hugo-academic/layouts/partials/widgets/consultancy.html
@@ -9,7 +9,7 @@
     {{ with $page.Params.subtitle }}<p>{{ . | markdownify }}</p>{{ end }}
   </div>
   <div class="col-xs-12 col-md-8">
-  <p>In my limited spare time I also offer consultancy on topics related 
+  <p>In my limited spare time I offer consultancy on topics related 
 to sampling, basic statistical analysis and social research methodology. A significant part of my current training is dedicated to the <b>R</b> environment for statistical analysis and data management.</p>
 <p>In a random order, this is a list of the institutions I have signed contracts with:</p>
 <p><a href="http://www.dccommunication.ro/">DC Communication</a></p>
